--- a/requirements.txt
+++ b/requirements.txt
@@ -17,11 +17,11 @@ Babel==2.6.0
 backcall==0.1.0
 beautifulsoup4==4.8.2
 billiard==3.5.0.4
-bleach==3.1.1
+bleach==3.1.5
 Boruta==0.3
 boto==2.49.0
-boto3==1.12.0
-botocore==1.15.0
+boto3==1.4.7
+botocore==1.7.48
 bs4==0.0.1
 cachetools==4.0.0
 category-encoders==2.0.0
@@ -32,7 +32,7 @@ cffi==1.11.5
 chardet==3.0.4
 chromedriver==2.24.1
 chromedriver-binary==81.0.4044.69.0
-Click==7.0
+click==6.7
 cliff==3.1.0
 cloud-sptheme==1.9.4
 cloudpickle==1.3.0
@@ -64,7 +64,7 @@ factor-analyzer==0.3.2
 featuretools==0.13.2
 flake8==3.7.9
 flake8-polyfill==1.0.2
-Flask==1.1.2
+Flask==0.12.5
 Flask-AppBuilder==1.10.0
 Flask-Babel==0.11.1
 Flask-Caching==1.4.0
@@ -78,7 +78,7 @@ Flask-Testing==0.7.1
 Flask-WTF==0.14.2
 flower==0.9.2
 fsspec==0.6.2
-future==0.18.2
+future==0.16.0
 gast==0.3.3
 geographiclib==1.49
 geojson==2.5.0
@@ -95,7 +95,7 @@ h5py==2.10.0
 HeapDict==1.0.1
 html5lib==0.9999999
 htmlmin==0.1.12
-httplib2==0.17.0
+httplib2==0.18.1
 humanize==0.5.1
 idna==2.8
 ijson==2.3
@@ -117,7 +117,7 @@ Jinja2==2.11.1
 jmespath==0.9.4
 joblib==0.14.1
 jsonlines==1.2.0
-jsonschema==3.2.0
+jsonschema==2.6.0
 jupyter==1.0.0
 jupyter-client==5.3.4
 jupyter-console==6.1.0
@@ -126,7 +126,7 @@ jupyterlab-pygments==0.1.0
 kaggle==1.5.6
 Keras==2.3.1
 Keras-Applications==1.0.8
-Keras-Preprocessing==1.1.0
+Keras-Preprocessing==1.1.2
 keras-rl==0.4.2
 kiwisolver==1.1.0
 kombu==4.2.1
@@ -225,7 +225,7 @@ retrying==1.3.3
 rfc3986==1.1.0
 rsa==4.0
 s3fs==0.4.0
-s3transfer==0.3.3
+s3transfer==0.1.13
 scikit-learn==0.22.1
 scipy==1.4.1
 seaborn==0.10.0
@@ -260,10 +260,12 @@ tabulator==1.14.3
 tangled-up-in-unicode==0.0.3
 tb-nightly==1.14.0a20190603
 tblib==1.6.0
-tensorboard==2.1.0
+tensorboard==2.3.0
+tensorboard-plugin-wit==1.7.0
 tensorflow==2.0.0b0
 tensorflow-estimator==2.1.0
-tensorflow-gpu==1.8.0
+tensorflow-gpu==2.3.0
+tensorflow-gpu-estimator==2.3.0
 termcolor==1.1.0
 terminado==0.8.3
 testpath==0.4.4
@@ -285,7 +287,7 @@ virtualenv==16.0.0
 visions==0.2.2
 wcwidth==0.1.8
 webencodings==0.5.1
-Werkzeug==1.0.0
+Werkzeug==0.16.1
 wfastcgi==3.0.0
 widgetsnbextension==3.5.1
 win-unicode-console==0.5
